Rezervation with firebase
-Add hotel to db
-Get rezervation
-Show all hotel with specific city

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -177,7 +177,7 @@
         android:layout_width="199dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:onClick="loadHotelList"
+        android:onClick="getDataFromDB"
         android:text="Ara"
         android:textColor="#fff"
         app:layout_constraintEnd_toEndOf="parent"
