--- a/app/src/main/res/layout/activity_add_hotel.xml
+++ b/app/src/main/res/layout/activity_add_hotel.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:visibility="visible"
     tools:context=".AddHotel">
 
   <Button
@@ -21,8 +21,8 @@
       android:id="@+id/button7"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginTop="20dp"
-      android:onClick="addHotelToDB"
+      android:layout_marginTop="5dp"
+      android:onClick="shareImage"
       android:text="Otel Ekle"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
@@ -31,13 +31,14 @@
   <TextView
       android:id="@+id/textView24"
       android:layout_width="360dp"
-      android:layout_height="45dp"
+      android:layout_height="35dp"
       android:layout_marginStart="25dp"
-      android:layout_marginTop="10dp"
+      android:layout_marginTop="5dp"
       android:layout_marginEnd="25dp"
       android:text="Otel Ekle"
+      android:textAlignment="textStart"
       android:textColor="#ad168b"
-      android:textSize="30dp"
+      android:textSize="25dp"
       android:textStyle="bold"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
@@ -47,7 +48,7 @@
   <TextView
       android:id="@+id/textView20"
       android:layout_width="124dp"
-      android:layout_height="40dp"
+      android:layout_height="35dp"
       android:layout_marginStart="25dp"
       android:text="Otel İsmi"
       android:textColor="#000"
@@ -59,10 +60,11 @@
   <EditText
       android:id="@+id/HotelName"
       android:layout_width="235dp"
-      android:layout_height="40dp"
+      android:layout_height="35dp"
       android:layout_marginEnd="25dp"
       android:inputType="text"
       android:minHeight="48dp"
+      android:textSize="16sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toEndOf="@+id/textView29"
@@ -71,7 +73,7 @@
   <TextView
       android:id="@+id/textView28"
       android:layout_width="124dp"
-      android:layout_height="40dp"
+      android:layout_height="35dp"
       android:layout_marginStart="25dp"
       android:text="Otel Şehir"
       android:textColor="#000"
@@ -83,10 +85,11 @@
   <EditText
       android:id="@+id/HotelCity"
       android:layout_width="235dp"
-      android:layout_height="40dp"
+      android:layout_height="35dp"
       android:layout_marginEnd="25dp"
       android:inputType="text"
       android:minHeight="48dp"
+      android:textSize="16sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toEndOf="@+id/textView29"
@@ -95,7 +98,7 @@
   <TextView
       android:id="@+id/textView30"
       android:layout_width="124dp"
-      android:layout_height="40dp"
+      android:layout_height="35dp"
       android:layout_marginStart="25dp"
       android:text="Otel Konum"
       android:textColor="#000"
@@ -107,10 +110,11 @@
   <EditText
       android:id="@+id/HotelLocation"
       android:layout_width="235dp"
-      android:layout_height="40dp"
+      android:layout_height="35dp"
       android:layout_marginEnd="25dp"
       android:inputType="text"
       android:minHeight="48dp"
+      android:textSize="16sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toEndOf="@+id/textView29"
@@ -119,7 +123,7 @@
   <TextView
       android:id="@+id/textView31"
       android:layout_width="124dp"
-      android:layout_height="40dp"
+      android:layout_height="35dp"
       android:layout_marginStart="25dp"
       android:text="Otel Fiyat"
       android:textColor="#000"
@@ -131,27 +135,179 @@
   <EditText
       android:id="@+id/HotelCost"
       android:layout_width="235dp"
-      android:layout_height="40dp"
+      android:layout_height="35dp"
       android:layout_marginEnd="25dp"
       android:inputType="text"
       android:minHeight="48dp"
+      android:textSize="16sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toEndOf="@+id/textView29"
       app:layout_constraintTop_toBottomOf="@+id/HotelLocation" />
 
   <TextView
+      android:id="@+id/textView21"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="5dp"
+      android:text="Fotoğraf Yükle"
+      android:textColor="#000000"
+      android:textSize="18dp"
+      android:textStyle="bold"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/HotelCost" />
+
+  <ImageView
+      android:id="@+id/HotelImage1"
+      android:layout_width="80dp"
+      android:layout_height="80dp"
+      android:layout_marginStart="25dp"
+      android:visibility="invisible"
+      app:layout_constraintBottom_toBottomOf="@+id/UploadImageButton1"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/textView21"
+      app:layout_constraintVertical_bias="0.0"
+      app:srcCompat="@android:drawable/alert_light_frame" />
+
+  <ImageView
+      android:id="@+id/CloseButton1"
+      android:layout_width="25dp"
+      android:layout_height="25dp"
+      android:onClick="closeButton"
+      android:visibility="invisible"
+      app:layout_constraintEnd_toEndOf="@+id/HotelImage1"
+      app:layout_constraintHorizontal_bias="1.0"
+      app:layout_constraintStart_toStartOf="@+id/HotelImage1"
+      app:layout_constraintTop_toTopOf="@+id/UploadImageButton1"
+      app:srcCompat="@android:drawable/btn_dialog" />
+
+  <ImageButton
+      android:id="@+id/UploadImageButton1"
+      android:layout_width="80dp"
+      android:layout_height="80dp"
+      android:layout_marginStart="25dp"
+      android:onClick="selectImage"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/textView21"
+      app:srcCompat="@android:drawable/ic_menu_gallery" />
+
+  <ImageView
+      android:id="@+id/HotelImage2"
+      android:layout_width="80dp"
+      android:layout_height="80dp"
+      android:layout_marginStart="10dp"
+      android:visibility="invisible"
+      app:layout_constraintBottom_toBottomOf="@+id/UploadImageButton1"
+      app:layout_constraintStart_toEndOf="@+id/HotelImage1"
+      app:layout_constraintTop_toBottomOf="@+id/textView21"
+      app:layout_constraintVertical_bias="0.0"
+      app:srcCompat="@android:drawable/alert_light_frame" />
+
+  <ImageView
+      android:id="@+id/CloseButton2"
+      android:layout_width="25dp"
+      android:layout_height="25dp"
+      android:onClick="closeButton"
+      android:visibility="invisible"
+      app:layout_constraintEnd_toEndOf="@+id/HotelImage2"
+      app:layout_constraintHorizontal_bias="1.0"
+      app:layout_constraintStart_toStartOf="@+id/HotelImage2"
+      app:layout_constraintTop_toTopOf="@+id/HotelImage2"
+      app:srcCompat="@android:drawable/btn_dialog" />
+
+  <ImageButton
+      android:id="@+id/UploadImageButton2"
+      android:layout_width="80dp"
+      android:layout_height="80dp"
+      android:layout_marginStart="10dp"
+      android:onClick="selectImage"
+      android:visibility="visible"
+      app:layout_constraintStart_toEndOf="@+id/HotelImage1"
+      app:layout_constraintTop_toBottomOf="@+id/textView21"
+      app:srcCompat="@android:drawable/ic_menu_gallery" />
+
+  <ImageView
+      android:id="@+id/HotelImage3"
+      android:layout_width="80dp"
+      android:layout_height="80dp"
+      android:layout_marginStart="10dp"
+      android:visibility="invisible"
+      app:layout_constraintBottom_toBottomOf="@+id/UploadImageButton1"
+      app:layout_constraintStart_toEndOf="@+id/HotelImage2"
+      app:layout_constraintTop_toBottomOf="@+id/textView21"
+      app:srcCompat="@android:drawable/alert_light_frame" />
+
+  <ImageView
+      android:id="@+id/CloseButton3"
+      android:layout_width="25dp"
+      android:layout_height="25dp"
+      android:onClick="closeButton"
+      android:visibility="invisible"
+      app:layout_constraintEnd_toEndOf="@+id/HotelImage3"
+      app:layout_constraintHorizontal_bias="1.0"
+      app:layout_constraintStart_toStartOf="@+id/HotelImage3"
+      app:layout_constraintTop_toTopOf="@+id/HotelImage3"
+      app:srcCompat="@android:drawable/btn_dialog" />
+
+  <ImageButton
+      android:id="@+id/UploadImageButton3"
+      android:layout_width="80dp"
+      android:layout_height="80dp"
+      android:layout_marginStart="10dp"
+      android:onClick="selectImage"
+      app:layout_constraintStart_toEndOf="@+id/HotelImage2"
+      app:layout_constraintTop_toBottomOf="@+id/textView21"
+      app:srcCompat="@android:drawable/ic_menu_gallery" />
+
+  <ImageView
+      android:id="@+id/HotelImage4"
+      android:layout_width="80dp"
+      android:layout_height="80dp"
+      android:layout_marginEnd="25dp"
+      android:visibility="invisible"
+      app:layout_constraintBottom_toBottomOf="@+id/UploadImageButton1"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toEndOf="@+id/HotelImage3"
+      app:layout_constraintTop_toBottomOf="@+id/textView21"
+      app:srcCompat="@android:drawable/alert_light_frame" />
+
+  <ImageView
+      android:id="@+id/CloseButton4"
+      android:layout_width="25dp"
+      android:layout_height="25dp"
+      android:onClick="closeButton"
+      android:visibility="invisible"
+      app:layout_constraintEnd_toEndOf="@+id/HotelImage4"
+      app:layout_constraintHorizontal_bias="1.0"
+      app:layout_constraintStart_toStartOf="@+id/UploadImageButton4"
+      app:layout_constraintTop_toTopOf="@+id/HotelImage4"
+      app:srcCompat="@android:drawable/btn_dialog" />
+
+  <ImageButton
+      android:id="@+id/UploadImageButton4"
+      android:layout_width="80dp"
+      android:layout_height="80dp"
+      android:layout_marginStart="10dp"
+      android:layout_marginEnd="25dp"
+      android:onClick="selectImage"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toEndOf="@+id/HotelImage3"
+      app:layout_constraintTop_toBottomOf="@+id/textView21"
+      app:srcCompat="@android:drawable/ic_menu_gallery" />
+
+  <TextView
       android:id="@+id/textView32"
       android:layout_width="358dp"
       android:layout_height="25dp"
-      android:layout_marginTop="20dp"
+      android:layout_marginTop="10dp"
       android:text="Otelin Niteliklerini Seçiniz."
       android:textColor="#000"
       android:textSize="18dp"
       android:textStyle="bold"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/HotelCost" />
+      app:layout_constraintTop_toBottomOf="@+id/UploadImageButton1" />
 
   <CheckBox
       android:id="@+id/Attribute1"
@@ -216,12 +372,12 @@
   <TextView
       android:id="@+id/textView33"
       android:layout_width="124dp"
-      android:layout_height="40dp"
+      android:layout_height="35dp"
       android:layout_marginStart="25dp"
       android:layout_marginTop="10dp"
       android:text="Otel Ruhsat Numarası"
       android:textColor="#000"
-      android:textSize="18dp"
+      android:textSize="15sp"
       android:textStyle="bold"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/Attribute6" />
@@ -229,11 +385,12 @@
   <EditText
       android:id="@+id/LicanceNo"
       android:layout_width="235dp"
-      android:layout_height="40dp"
+      android:layout_height="35dp"
       android:layout_marginTop="10dp"
       android:layout_marginEnd="25dp"
       android:inputType="text"
       android:minHeight="48dp"
+      android:textSize="16sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toEndOf="@+id/textView29"
@@ -242,11 +399,11 @@
   <TextView
       android:id="@+id/textView34"
       android:layout_width="124dp"
-      android:layout_height="40dp"
+      android:layout_height="35dp"
       android:layout_marginStart="25dp"
       android:text="Turizm İşletme Belge No"
       android:textColor="#000"
-      android:textSize="18dp"
+      android:textSize="15sp"
       android:textStyle="bold"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/textView33" />
@@ -254,10 +411,11 @@
   <EditText
       android:id="@+id/DocumentNo"
       android:layout_width="235dp"
-      android:layout_height="40dp"
+      android:layout_height="35dp"
       android:layout_marginEnd="25dp"
       android:inputType="text"
       android:minHeight="48dp"
+      android:textSize="16sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toEndOf="@+id/textView29"
