--- a/app/src/main/res/layout/activity_hotel.xml
+++ b/app/src/main/res/layout/activity_hotel.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="false"
     tools:context=".HotelActivity">
 
     <Button
@@ -17,7 +18,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/hotelImage1"
         android:layout_width="176dp"
         android:layout_height="172dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,7 +28,7 @@
         app:srcCompat="@drawable/otel1" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/hotelHeader"
         android:layout_width="161dp"
         android:layout_height="46dp"
         android:layout_marginTop="50dp"
@@ -37,37 +38,37 @@
         android:textSize="27sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintStart_toEndOf="@+id/hotelImage1"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView10"
+        android:id="@+id/hotelImage2"
         android:layout_width="130dp"
         android:layout_height="130dp"
         android:layout_marginStart="4dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/hotelImage1"
         app:srcCompat="@drawable/oda" />
 
     <ImageView
-        android:id="@+id/imageView11"
+        android:id="@+id/hotelImage3"
         android:layout_width="130dp"
         android:layout_height="130dp"
         android:layout_marginStart="4dp"
         android:layout_marginEnd="4dp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView12"
+        app:layout_constraintEnd_toStartOf="@+id/hotelImage4"
         app:layout_constraintHorizontal_bias="0.4"
-        app:layout_constraintStart_toEndOf="@+id/imageView10"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintStart_toEndOf="@+id/hotelImage2"
+        app:layout_constraintTop_toBottomOf="@+id/hotelImage1"
         app:srcCompat="@drawable/restoran1" />
 
     <ImageView
-        android:id="@+id/imageView12"
+        android:id="@+id/hotelImage4"
         android:layout_width="130dp"
         android:layout_height="130dp"
         android:layout_marginEnd="4dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/hotelImage1"
         app:srcCompat="@drawable/havuz" />
 
     <TextView
@@ -82,18 +83,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.097"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView10" />
+        app:layout_constraintTop_toBottomOf="@+id/hotelImage2" />
 
     <TextView
-        android:id="@+id/textView11"
+        android:id="@+id/hotelCost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="10dp"
         android:text="250TL"
+        android:textColor="#000000"
         android:textSize="15dp"
         app:layout_constraintStart_toEndOf="@+id/textView9"
-        app:layout_constraintTop_toBottomOf="@+id/imageView10" />
+        app:layout_constraintTop_toBottomOf="@+id/hotelImage2" />
 
     <TextView
         android:id="@+id/textView10"
@@ -110,83 +112,102 @@
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/hotelLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:text="Ataşehir/İstanbul"
+        android:textColor="#000000"
         android:textSize="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView10"
-        app:layout_constraintTop_toBottomOf="@+id/textView11" />
+        app:layout_constraintTop_toBottomOf="@+id/hotelCost" />
 
     <CheckBox
-        android:id="@+id/checkBox2"
+        android:id="@+id/hotelAttr1"
         android:layout_width="342dp"
         android:layout_height="19dp"
         android:layout_marginTop="10dp"
         android:checked="false"
+        android:clickable="false"
         android:text="Kablosuz internet"
+        android:textColorHighlight="#673AB7"
+        android:textColorLink="#9C27B0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView12" />
+        app:layout_constraintTop_toBottomOf="@+id/hotelLocation" />
 
     <CheckBox
-        android:id="@+id/checkBox3"
+        android:id="@+id/hotelAttr2"
         android:layout_width="342dp"
         android:layout_height="19dp"
         android:layout_marginTop="5dp"
         android:checked="false"
+        android:clickable="false"
         android:text="Kuru temizleme"
+        android:textColorHighlight="#673AB7"
+        android:textColorLink="#9C27B0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />
+        app:layout_constraintTop_toBottomOf="@+id/hotelAttr1" />
 
     <CheckBox
-        android:id="@+id/checkBox4"
+        android:id="@+id/hotelAttr3"
         android:layout_width="342dp"
         android:layout_height="19dp"
         android:layout_marginTop="5dp"
         android:checked="false"
+        android:clickable="false"
         android:text="Otopark"
+        android:textColorHighlight="#673AB7"
+        android:textColorLink="#9C27B0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox3" />
+        app:layout_constraintTop_toBottomOf="@+id/hotelAttr2" />
 
     <CheckBox
-        android:id="@+id/checkBox5"
+        android:id="@+id/hotelAttr4"
         android:layout_width="342dp"
         android:layout_height="19dp"
         android:layout_marginTop="5dp"
         android:checked="false"
+        android:clickable="false"
         android:text="Restoran"
+        android:textColorHighlight="#673AB7"
+        android:textColorLink="#9C27B0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox4" />
+        app:layout_constraintTop_toBottomOf="@+id/hotelAttr3" />
 
     <CheckBox
-        android:id="@+id/checkBox6"
+        android:id="@+id/hotelAttr5"
         android:layout_width="342dp"
         android:layout_height="19dp"
         android:layout_marginTop="5dp"
         android:checked="false"
+        android:clickable="false"
         android:text="Resepsiyon hizmeti"
+        android:textColorHighlight="#673AB7"
+        android:textColorLink="#9C27B0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox5" />
+        app:layout_constraintTop_toBottomOf="@+id/hotelAttr4" />
 
     <CheckBox
-        android:id="@+id/checkBox7"
+        android:id="@+id/hotelAttr6"
         android:layout_width="342dp"
         android:layout_height="19dp"
         android:layout_marginTop="5dp"
         android:checked="false"
+        android:clickable="false"
         android:text="Çamaşırhane"
+        android:textColorHighlight="#673AB7"
+        android:textColorLink="#9C27B0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox6" />
+        app:layout_constraintTop_toBottomOf="@+id/hotelAttr5" />
 
     <Button
         android:id="@+id/button"
@@ -199,7 +220,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox7"
+        app:layout_constraintTop_toBottomOf="@+id/hotelAttr6"
         app:layout_constraintVertical_bias="0.19" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
